# controllers/mutant.go
@@ -1,6 +1,11 @@
 package controllers
 
 import (
+	"encoding/json"
+
+	"github.com/Miavega/api_mutants/helpers"
+
+	"github.com/Miavega/api_mutants/models"
 	"github.com/astaxie/beego"
 )
 
@@ -12,10 +17,6 @@ type MutantController struct {
 // URLMapping ...
 func (c *MutantController) URLMapping() {
 	c.Mapping("Post", c.Post)
-	c.Mapping("GetOne", c.GetOne)
-	c.Mapping("GetAll", c.GetAll)
-	c.Mapping("Put", c.Put)
-	c.Mapping("Delete", c.Delete)
 }
 
 // Post ...
@@ -26,55 +27,12 @@ func (c *MutantController) URLMapping() {
 // @Failure 403 body is empty
 // @router / [post]
 func (c *MutantController) Post() {
-
-}
-
-// GetOne ...
-// @Title GetOne
-// @Description get Mutant by id
-// @Param	id		path 	string	true		"The key for staticblock"
-// @Success 200 {object} models.Mutant
-// @Failure 403 :id is empty
-// @router /:id [get]
-func (c *MutantController) GetOne() {
-
-}
-
-// GetAll ...
-// @Title GetAll
-// @Description get Mutant
-// @Param	query	query	string	false	"Filter. e.g. col1:v1,col2:v2 ..."
-// @Param	fields	query	string	false	"Fields returned. e.g. col1,col2 ..."
-// @Param	sortby	query	string	false	"Sorted-by fields. e.g. col1,col2 ..."
-// @Param	order	query	string	false	"Order corresponding to each sortby field, if single value, apply to all sortby fields. e.g. desc,asc ..."
-// @Param	limit	query	string	false	"Limit the size of result set. Must be an integer"
-// @Param	offset	query	string	false	"Start position of result set. Must be an integer"
-// @Success 200 {object} models.Mutant
-// @Failure 403
-// @router / [get]
-func (c *MutantController) GetAll() {
-
-}
-
-// Put ...
-// @Title Put
-// @Description update the Mutant
-// @Param	id		path 	string	true		"The id you want to update"
-// @Param	body		body 	models.Mutant	true		"body for Mutant content"
-// @Success 200 {object} models.Mutant
-// @Failure 403 :id is not int
-// @router /:id [put]
-func (c *MutantController) Put() {
-
-}
-
-// Delete ...
-// @Title Delete
-// @Description delete the Mutant
-// @Param	id		path 	string	true		"The id you want to delete"
-// @Success 200 {string} delete success!
-// @Failure 403 id is empty
-// @router /:id [delete]
-func (c *MutantController) Delete() {
-
+	var mutant models.Mutant
+	json.Unmarshal(c.Ctx.Input.RequestBody, &mutant)
+	res := helpers.Validate(mutant.Dna)
+	if !res {
+		c.Abort("403")
+	}
+	c.Data["json"] = true
+	c.ServeJSON()
 }
